--- a/src/view/MainFrame.form
+++ b/src/view/MainFrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Periodic Table IS"/>
@@ -403,19 +403,19 @@
 
                   <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
                   <SubComponents>
-                    <Component class="javax.swing.JTable" name="jTable1">
+                    <Component class="javax.swing.JTable" name="tableElement">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="9" rowCount="1">
-                            <Column editable="false" title="Atomic Number" type="java.lang.Integer"/>
+                            <Column editable="false" title="Atomic Number" type="java.lang.String"/>
                             <Column editable="false" title="Symbol" type="java.lang.String"/>
-                            <Column editable="false" title="Atomic Weight" type="java.lang.Long"/>
-                            <Column editable="false" title="BoilingPoint" type="java.lang.Float"/>
-                            <Column editable="false" title="IonisationPotential" type="java.lang.Float"/>
-                            <Column editable="false" title="EletroNegativity" type="java.lang.Float"/>
-                            <Column editable="false" title="AtomicRadius" type="java.lang.Float"/>
-                            <Column editable="false" title="MeltingPoint" type="java.lang.Integer"/>
-                            <Column editable="false" title="Density" type="java.lang.Long"/>
+                            <Column editable="false" title="Atomic Weight" type="java.lang.String"/>
+                            <Column editable="false" title="BoilingPoint" type="java.lang.String"/>
+                            <Column editable="false" title="IonisationPotential" type="java.lang.String"/>
+                            <Column editable="false" title="EletroNegativity" type="java.lang.String"/>
+                            <Column editable="false" title="AtomicRadius" type="java.lang.String"/>
+                            <Column editable="false" title="MeltingPoint" type="java.lang.String"/>
+                            <Column editable="false" title="Density" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
